sign up and login done

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ session_start();
             <div class="icon-container"></div>
 
                 <!-- Login Form -->
-                <form action="backend/login.php" method="POST">
+                <form action="api/login_api.php" method="POST">
                     <!-- Username Field -->
                     <div class="input-group custom-input">
                         <span class="input-group-text"><i class="fas fa-user"></i></span>
