--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ session_start();
                 <h4 class="text-center">CREATE AN ACCOUNT</h4>
 
                 <!-- Sign Up Form -->
-                <form action="backend/signup.php" method="POST">
+                <form action="api/signup.php" method="POST">
                     <!-- Full Name Field -->
                     <div class="input-group custom-input">
                         <span class="input-group-text"><i class="fas fa-user"></i></span>
