login, logout, sign up done

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -111,7 +111,7 @@ if (isset($_SESSION['user'])) {
     
 
     <!-- Logout Button for Mobile (Only Icon) -->
-    <a href="backend/logout.php" class="logout-mobile">
+    <a href="../api/logout.php" class="logout-mobile">
         <i class="fas fa-sign-out-alt"></i>
         <span>Logout</span>
     </a>
