--- a/pages/recordings.html
+++ b/pages/recordings.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/dashboardv5styles.css">
-    <link rel="stylesheet" href="assets/css/historylog.css">
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/images/logoweb.png">
+    <link rel="stylesheet" href="../assets/css/dashboardv5styles.css">
+    <link rel="stylesheet" href="../assets/css/historylog.css">
+    <link rel="icon" type="image/png" sizes="180x180" href="../assets/images/logoweb.png">
 
 </head>
 <body>
@@ -27,7 +27,7 @@
     <!-- Sidebar -->
     <aside class="sidebar d-flex flex-column justify-content-between">
         <div class="logo-container text-center">
-            <img src="assets/images/logo-bottom.png" alt="WeeVibes Logo" class="img-fluid">
+            <img src="../assets/images/logo-bottom.png" alt="WeeVibes Logo" class="img-fluid">
         </div>
         
         <nav class="menu-items mt-4">
