--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ session_start();
 
 
 
-    <script src="js/nature.js"></script>
-    <script src="js/welcome_closeweb.js"></script>
+    <script src="assets/js/nature.js"></script>
+    <script src="assets/js/welcome_closeweb.js"></script>
 
     <!-- Bootstrap 5.3.3 CSS (Matching JS Version) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -456,7 +456,7 @@ session_start();
 
 
 </script>
-<script src="js/prevent_back.js"></script>
+<script src="assets/js/prevent_back.js"></script>
   </body>
   </html>
   
