--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -55,7 +55,7 @@ if (isset($_SESSION['user'])) {
             <button class="sidebar-btn btn text-white w-100" onclick="window.location.href='historylog.html'"><i class="fas fa-history"></i> History Log</button>
            <!-- <button class="sidebar-btn btn text-white w-100" onclick="window.location.href='recordings.html'"><i class="fas fa-video"></i> Recordings</button>-->
             <!-- Logout Button (Hidden on Small Screens) -->
-            <button class="sidebar-btn btn text-white w-100 logout-btn" onclick="window.location.href='backend/logout.php'"><i class="fas fa-sign-out-alt"></i> Logout</button>
+            <button class="sidebar-btn btn text-white w-100 logout-btn" onclick="window.location.href='../api/logout.php'"><i class="fas fa-sign-out-alt"></i> Logout</button>
         </nav>
     </aside>
 
