--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ session_start();
             <div class="icon-container"></div>
 
                 <!-- Login Form -->
-                <form action="api/login_api.php" method="POST">
+                <form action="api/users/login.php" method="POST">
                     <!-- Username Field -->
                     <div class="input-group custom-input">
                         <span class="input-group-text"><i class="fas fa-user"></i></span>
@@ -140,7 +140,7 @@ session_start();
                 <h4 class="text-center">CREATE AN ACCOUNT</h4>
 
                 <!-- Sign Up Form -->
-                <form action="api/signup.php" method="POST">
+                <form action="api/users/signup.php" method="POST">
                     <!-- Full Name Field -->
                     <div class="input-group custom-input">
                         <span class="input-group-text"><i class="fas fa-user"></i></span>
